--- a/iMatMini/src/iMat/FXML/CartPage.fxml
+++ b/iMatMini/src/iMat/FXML/CartPage.fxml
@@ -2,9 +2,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
 <fx:root prefHeight="539.0" prefWidth="1095.0" style="-fx-background-color: #ffffff;" stylesheets="@../css/cart.css" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
@@ -18,7 +20,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="186.0" layoutY="19.0" mnemonicParsing="false" style="-fx-background-color: #00000000;">
+      <Button fx:id="emptyCart" layoutX="186.0" layoutY="19.0" mnemonicParsing="false" style="-fx-background-color: #00000000;">
          <graphic>
             <ImageView fitHeight="64.0" fitWidth="162.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -27,7 +29,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="342.0" layoutY="20.0" mnemonicParsing="false" style="-fx-background-color: #00000000;">
+      <Button fx:id="favoriteCart" layoutX="342.0" layoutY="20.0" mnemonicParsing="false" style="-fx-background-color: #00000000;">
          <graphic>
             <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -36,33 +38,38 @@
             </ImageView>
          </graphic>
       </Button>
-      <AnchorPane layoutX="869.0" layoutY="91.0" prefHeight="346.0" prefWidth="200.0" style="-fx-background-color: #c7c7c7;">
+      <AnchorPane layoutX="865.0" layoutY="174.0" prefHeight="346.0" prefWidth="216.0" style="-fx-background-color: #c7c7c7;">
          <children>
             <Label alignment="CENTER" layoutX="15.0" layoutY="14.0" prefHeight="35.0" prefWidth="170.0" text="Summering">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label layoutX="15.0" layoutY="60.0" prefHeight="26.0" prefWidth="118.0" text="x varor: " textAlignment="RIGHT">
+            <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutY="60.0" prefHeight="26.0" prefWidth="110.0" text="Antal varor:" textAlignment="RIGHT">
                <font>
-                  <Font size="14.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label layoutX="15.0" layoutY="86.0" prefHeight="26.0" prefWidth="118.0" text="Rabatter: " textAlignment="RIGHT">
+            <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutY="86.0" prefHeight="27.0" prefWidth="110.0" text="Att betala:" textAlignment="RIGHT">
                <font>
-                  <Font size="14.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label layoutX="15.0" layoutY="146.0" prefHeight="26.0" prefWidth="118.0" text="Totalt:" textAlignment="RIGHT">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Button fx:id="goToCheckoutButton" layoutX="15.0" layoutY="284.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="170.0" style="-fx-background-color: #81D762;" text="Gå till kassan">
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutX="25.0" layoutY="281.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="170.0" style="-fx-background-color: #81D762;" text="Gå till kassan">
                <font>
                   <Font size="24.0" />
                </font>
             </Button>
+            <Label layoutX="120.0" layoutY="60.0" prefHeight="27.0" prefWidth="74.0" text="x st" textAlignment="RIGHT" fx:id="xVaror">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="120.0" layoutY="86.0" prefHeight="27.0" prefWidth="74.0" text="x kr" textAlignment="RIGHT" fx:id="xPris">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
       <Label layoutX="14.0" layoutY="98.0" prefHeight="106.0" prefWidth="422.0" text="Din varukorg">
@@ -70,5 +77,10 @@
             <Font size="36.0" />
          </font>
       </Label>
+      <ScrollPane layoutX="14.0" layoutY="178.0" prefHeight="338.0" prefWidth="834.0">
+         <content>
+            <FlowPane fx:id="productsPane" alignment="TOP_CENTER" prefHeight="342.0" prefWidth="810.0" style="-fx-hgap: 10; -fx-vgap: 10;" />
+         </content>
+      </ScrollPane>
    </children>
 </fx:root>
