--- a/iMatMini/src/iMat/FXML/CartPage.fxml
+++ b/iMatMini/src/iMat/FXML/CartPage.fxml
@@ -55,7 +55,7 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Button alignment="CENTER" contentDisplay="CENTER" layoutX="25.0" layoutY="281.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="170.0" style="-fx-background-color: #81D762;" text="Gå till kassan">
+            <Button fx:id="goToCheckoutButton" alignment="CENTER" contentDisplay="CENTER" layoutX="25.0" layoutY="281.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="170.0" style="-fx-background-color: #81D762;" text="Gå till kassan">
                <font>
                   <Font size="24.0" />
                </font>
