--- a/iMatMini/src/iMat/FXML/ProductDescription.fxml
+++ b/iMatMini/src/iMat/FXML/ProductDescription.fxml
@@ -13,11 +13,11 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root id="AnchorPane" prefHeight="640.0" prefWidth="1095.0" type="AnchorPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root id="AnchorPane" prefHeight="640.0" prefWidth="1095.0" stylesheets="@../css/productItem.css" type="AnchorPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane fx:id="productDescriptionTransparentPane" prefHeight="587.0" prefWidth="1100.0" style="-fx-background-color: rgba(0, 0, 0, 0.75);" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane fx:id="mainPane" layoutX="19.0" layoutY="104.0" prefHeight="456.0" prefWidth="749.0" style="-fx-background-color: -fx-background;" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="50.0">
+            <AnchorPane fx:id="mainPane" layoutX="19.0" layoutY="104.0" prefHeight="456.0" prefWidth="749.0" styleClass="whiteBackGround" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="50.0">
                <children>
                   <AnchorPane fx:id="produktbeskrivningAnchor" layoutX="1.0" layoutY="327.0" prefHeight="165.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                      <children>
@@ -34,15 +34,15 @@
                         <TextArea fx:id="övrig_information" layoutY="47.0" prefHeight="166.0" prefWidth="700.0" text="&#10;Produktbeskriving här.&#10;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                      </children>
                   </AnchorPane>
-                  <ImageView fx:id="detailImage" fitHeight="270.0" fitWidth="340.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <Label fx:id="titleLabel" layoutX="340.0" layoutY="9.0" prefHeight="53.0" prefWidth="293.0" text="Title" AnchorPane.rightAnchor="57.0" AnchorPane.topAnchor="10.0">
+                  <ImageView fx:id="detailImage" fitHeight="268.0" fitWidth="340.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <Label fx:id="titleLabel" layoutX="340.0" layoutY="9.0" prefHeight="53.0" prefWidth="252.0" styleClass="text-big-title" text="Title" AnchorPane.rightAnchor="57.0" AnchorPane.topAnchor="10.0">
                      <font>
                         <Font name="Arial" size="36.0" />
                      </font>
                   </Label>
                   <Button accessibleRole="BUTTON" layoutY="275.0" mnemonicParsing="false" onAction="#prodClicked" prefHeight="52.0" prefWidth="234.0" text="Produktbeskrivning" AnchorPane.leftAnchor="0.0">
                      <font>
-                        <Font size="22.0" />
+                        <Font name="Arial" size="22.0" />
                      </font>
                   </Button>
                   <Button layoutX="233.0" layoutY="275.0" mnemonicParsing="false" onAction="#innerhållsföreckningAnchor" prefHeight="52.0" prefWidth="234.0" text="Innerhållsförteckning" AnchorPane.leftAnchor="233.0">
@@ -56,7 +56,7 @@
                      </font>
                   </Button>
                   <Separator layoutX="337.0" layoutY="35.0" orientation="VERTICAL" prefHeight="200.0" AnchorPane.bottomAnchor="230.0" AnchorPane.topAnchor="0.0" />
-                  <Label fx:id="priceLabel" alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="438.0" layoutY="104.0" prefHeight="53.0" prefWidth="165.0" text="Pris">
+                  <Label fx:id="priceLabel" alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="438.0" layoutY="104.0" prefHeight="53.0" prefWidth="165.0" styleClass="text-price-description" text="Pris">
                      <font>
                         <Font name="Arial" size="25.0" />
                      </font>
@@ -66,8 +66,9 @@
                         <Image url="@../resources/icon_close.png" />
                      </image>
                   </ImageView>
-                  <StackPane layoutX="25.0" layoutY="25.0" prefHeight="37.0" prefWidth="34.0">
+                  <StackPane layoutX="343.0" layoutY="18.0" prefHeight="37.0" prefWidth="34.0">
                      <children>
+                        <AnchorPane fx:id="hideFavoriteIconAP" onMouseClicked="#removeFavoriteEvent" prefHeight="200.0" prefWidth="200.0" styleClass="whiteBackGround" />
                         <AnchorPane fx:id="favoritedAnchorPane" layoutY="200.0" onMouseClicked="#removeFavoriteEvent" prefHeight="200.0" prefWidth="200.0">
                            <children>
                               <ImageView fitHeight="34.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
@@ -97,7 +98,7 @@
                         <String fx:value="text-eco" />
                      </styleClass>
                   </Label>
-                  <StackPane layoutX="430.0" layoutY="191.0" prefHeight="48.0" prefWidth="174.0" styleClass="whiteGreyBackground">
+                  <StackPane layoutX="430.0" layoutY="191.0" prefHeight="48.0" prefWidth="174.0" styleClass="whiteBackGround">
                      <children>
                         <AnchorPane fx:id="addRemoveProductAnchorPane" prefHeight="50.0" prefWidth="185.0" styleClass="whiteGreyBackGround">
                            <children>
@@ -118,9 +119,9 @@
                               </ImageView>
                            </children>
                         </AnchorPane>
-                        <AnchorPane fx:id="addProductAnchorPane" prefHeight="50.0" prefWidth="185.0" styleClass="whiteGreyBackGround">
+                        <AnchorPane fx:id="addProductAnchorPane" prefHeight="50.0" prefWidth="185.0" styleClass="whiteBackGround">
                            <children>
-                              <Button layoutX="14.0" layoutY="7.0" mnemonicParsing="false" onMouseClicked="#addProductClickEvent" prefHeight="34.0" prefWidth="148.0" style="-fx-background-color: #81D762;" styleClass="addButton" text="Lägg till" />
+                              <Button layoutX="14.0" layoutY="7.0" mnemonicParsing="false" onMouseClicked="#addProductClickEvent" prefHeight="34.0" prefWidth="148.0" styleClass="addButton" text="Lägg till" />
                            </children>
                         </AnchorPane>
                      </children>
