--- a/iMatMini/src/iMat/FXML/LoginLightBox.fxml
+++ b/iMatMini/src/iMat/FXML/LoginLightBox.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -53,6 +55,11 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ImageView fx:id="closeImageView" fitHeight="36.0" fitWidth="37.0" layoutX="391.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="3.0">
+                     <image>
+                        <Image url="@../resources/icon_close_hover.png" />
+                     </image>
+                  </ImageView>
                </children>
                <opaqueInsets>
                   <Insets />
